--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -14,7 +14,7 @@ noinst_LTLIBRARIES = libltdlc.la
 endif
 
 libltdl_la_SOURCES = ltdl.c
-libltdl_la_LDFLAGS = -version-info 1:1:1
+libltdl_la_LDFLAGS = -version-info 1:2:1
 libltdl_la_LIBADD = $(LIBADD_DL)
 
 libltdlc_la_SOURCES = ltdl.c
@@ -29,7 +29,7 @@ libtool: $(LIBTOOL_DEPS)
 
 ## This allows us to install libltdl without using ln and without creating
 ## a world writeable directory.
-## FIXME:  Removed this rule once automake can do this properly by itself.
+## FIXME:  Remove this rule once automake can do this properly by itself.
 local-install-files: $(DISTFILES)
 	-rm -rf $(DESTDIR)$(datadir)/libtool/libltdl
 	$(mkinstalldirs) $(DESTDIR)$(datadir)/libtool/libltdl
