* NEWS: updated * ltmain.in: preserve $CC (reported by Tom Tromey) * ltconfig.in: remove second occurence of sysv5 * libltdl/Makefile.am: increment version number, fix typo * libltdl/ltdl.c (lt_dlsym): don't report an error if the   libltdl-style symbol name wasn't found
* ltconfig.in: add support for Unixware (sysv4.2uw2*)


* ltmain.in (-DPIC):  changed the order of pic flags a little to
prevent upsetting the sgi c++ compiler.


* libltdl/Makefile.am: don't preserve file attributes when
  installing the libltdl sources


* ltconfig.in (whole-archive-flag-spec):  I had been
wondering why my file system was filling up with empty
files named `71'... seems I forgot to hold in the
shift key when redirecting stderr, 2>&1.  Doh!


* ltconfig.in (sysv):  More UW7 support.


* ltconfig.in (sysv5): Added support required for shared
library linking on SCO UW7.


* ltconfig.in (CDPATH): Set to `:' instead of empty.
* ltmain.in (CDPATH): Likewise.
Reported by Greg McGary <gkm@eng.ascend.com>


* ltconfig.in: use CC -E when checking for ELF support
  on NetBSD (reported by Todd Vierling <tv@pobox.com>)


* ltconfig.in: add support for UnixWare 7.X.X


* doc/libtool.texi: document use of noinst_LTLIBRARIES for
  convenience libraries

* ltconfig.in: check for freebsdelf3, not just freebsd3

* ltmain.in: enable workaround for freebsdelf3.0


* ltconfig.in: export_dynamic_flag_spec is -rdynamic on BSD/OS


* libltdl/COPYING.LIB: Update to version 2.1.
* libltdl/ltdl.h, libltdl/ltdl.c: Update FSF address.


* doc/libtool.texi (Compile mode): typo correction.
(Link mode): and another.
(Release numbers):  and another.
(Distributing libltdl): and another.
(Test descriptions): and another.
(libtool script contents): and one more.


* ltmain.in: Ensure that gcc on HPsUX uses -fPIC, or else
initialised structures are sometimes emitted in the code section.


* ltmain.in: Fix creation of relative links to object files in
sub-dirs.


* ltconfig.in:  Updated bsdi4 soname specs to be more lik

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -14,7 +14,7 @@ noinst_LTLIBRARIES = libltdlc.la
 endif
 
 libltdl_la_SOURCES = ltdl.c
-libltdl_la_LDFLAGS = -version-info 1:1:1
+libltdl_la_LDFLAGS = -version-info 1:2:1
 libltdl_la_LIBADD = $(LIBADD_DL)
 
 libltdlc_la_SOURCES = ltdl.c
@@ -29,16 +29,16 @@ libtool: $(LIBTOOL_DEPS)
 
 ## This allows us to install libltdl without using ln and without creating
 ## a world writeable directory.
-## FIXME:  Removed this rule once automake can do this properly by itself.
+## FIXME:  Remove this rule once automake can do this properly by itself.
 local-install-files: $(DISTFILES)
 	-rm -rf $(DESTDIR)$(datadir)/libtool/libltdl
 	$(mkinstalldirs) $(DESTDIR)$(datadir)/libtool/libltdl
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$d/$$file $(DESTDIR)$(datadir)/libtool/libltdl/$$file; \
+	    cp -r $$d/$$file $(DESTDIR)$(datadir)/libtool/libltdl/$$file; \
 	  else \
 	    test -f $(DESTDIR)$(datadir)/libtool/libltdl/$$file \
-	    || cp -p $$d/$$file $(DESTDIR)$(datadir)/libtool/libltdl/$$file || :; \
+	    || cp $$d/$$file $(DESTDIR)$(datadir)/libtool/libltdl/$$file || :; \
 	  fi; \
 	done
